# Bangla-NLP

./: .gitignore  Dockerfile  PROJECT.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: python-app.yml
app/: app.py
app/controllers/: api_controller.py  web_controller.py
app/core/: config.py
app/models/: document.py
app/schemas/: document.py
app/services/: vector_store.py
app/views/static/css/: style.css
app/views/static/js/: app.js
app/views/templates/: index.html
notebook/: main.ipynb
scripts/: Build.sh  Seed.sh  Start.sh  Stop.sh  Test.sh  app.py  configure_finetune.py  coqui_tts_api.py  pipeline.py  prepare_bangla_speech_corpus.py  synthesize_bangla_silero.py  synthesize_bangla_tts.py
scripts/helper/: __init__.py  raw_data.py  synthsizer.py
tests/: test_api.py
