[project]
name = "NLP-Project"
version = "1.0.0"
description = "Natural Language Processing project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==2.19.0",
    "evaluate==0.4.2",
    "fastapi[all]==0.111.0",
    "fastapi-cloud==0.0.1",
    "httpx>=0.28.1",
    "ipykernel==6.29.4",
    "jinja2==3.1.4",
    "jupyterlab==4.2.1",
    "nltk==3.8.1",
    "notebook==7.2.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "psycopg2-binary==2.9.9",
    "pytest>=9.0.3",
    "python-multipart==0.0.9",
    "qdrant-client==1.9.1",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "sentencepiece==0.2.0",
    "sqlalchemy==2.0.30",
    "streamlit==1.34.0",
    "tensorboard==2.16.2",
    "tensorflow==2.16.1",
    "tokenizers==0.19.1",
    "transformers==4.40.2",
    "uvicorn[standard]==0.30.1",
]
